backend/compiler/parser.output
Terminals unused in grammar

    RETURN
    COMMA


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | stmt

    4 stmt: decl
    5     | assign_stmt
    6     | if_stmt
    7     | while_stmt
    8     | print_stmt

    9 decl: INT ID_TOK SEMI
   10     | FLOAT ID_TOK SEMI

   11 assign_stmt: ID_TOK ASSIGN expr SEMI

   12 if_stmt: IF LPAREN rel_expr RPAREN block
   13        | IF LPAREN rel_expr RPAREN block ELSE block

   14 while_stmt: WHILE LPAREN rel_expr RPAREN block

   15 print_stmt: PRINT LPAREN expr RPAREN SEMI

   16 block: LBRACE stmts RBRACE
   17      | LBRACE RBRACE

   18 rel_expr: expr EQ expr
   19         | expr NEQ expr
   20         | expr LT expr
   21         | expr GT expr
   22         | expr LEQ expr
   23         | expr GEQ expr

   24 expr: expr PLUS expr
   25     | expr MINUS expr
   26     | expr STAR expr
   27     | expr SLASH expr
   28     | expr MOD expr
   29     | MINUS expr
   30     | LPAREN expr RPAREN
   31     | ID_TOK
   32     | INT_NUM
   33     | FLOAT_NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID_TOK <str> (258) 9 10 11 31
    INT_NUM <ival> (259) 32
    FLOAT_NUM <fval> (260) 33
    INT (261) 9
    FLOAT (262) 10
    IF (263) 12 13
    ELSE (264) 13
    WHILE (265) 14
    PRINT (266) 15
    RETURN (267)
    ASSIGN (268) 11
    EQ (269) 18
    NEQ (270) 19
    LT (271) 20
    GT (272) 21
    LEQ (273) 22
    GEQ (274) 23
    PLUS (275) 24
    MINUS (276) 25 29
    STAR (277) 26
    SLASH (278) 27
    MOD (279) 28
    LPAREN (280) 12 13 14 15 30
    RPAREN (281) 12 13 14 15 30
    LBRACE (282) 16 17
    RBRACE (283) 16 17
    SEMI (284) 9 10 11 15
    COMMA (285)
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program <node> (33)
        on left: 1
        on right: 0
    stmts <node> (34)
        on left: 2 3
        on right: 1 2 16
    stmt <node> (35)
        on left: 4 5 6 7 8
        on right: 2 3
    decl <node> (36)
        on left: 9 10
        on right: 4
    assign_stmt <node> (37)
        on left: 11
        on right: 5
    if_stmt <node> (38)
        on left: 12 13
        on right: 6
    while_stmt <node> (39)
        on left: 14
        on right: 7
    print_stmt <node> (40)
        on left: 15
        on right: 8
    block <node> (41)
        on left: 16 17
        on right: 12 13 14
    rel_expr <node> (42)
        on left: 18 19 20 21 22 23
        on right: 12 13 14
    expr <node> (43)
        on left: 24 25 26 27 28 29 30 31 32 33
        on right: 11 15 18 19 20 21 22 23 24 25 26 27 28 29 30


State 0

    0 $accept: • program $end

    ID_TOK  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6

    program      go to state 7
    stmts        go to state 8
    stmt         go to state 9
    decl         go to state 10
    assign_stmt  go to state 11
    if_stmt      go to state 12
    while_stmt   go to state 13
    print_stmt   go to state 14


State 1

   11 assign_stmt: ID_TOK • ASSIGN expr SEMI

    ASSIGN  shift, and go to state 15


State 2

    9 decl: INT • ID_TOK SEMI

    ID_TOK  shift, and go to state 16


State 3

   10 decl: FLOAT • ID_TOK SEMI

    ID_TOK  shift, and go to state 17


State 4

   12 if_stmt: IF • LPAREN rel_expr RPAREN block
   13        | IF • LPAREN rel_expr RPAREN block ELSE block

    LPAREN  shift, and go to state 18


State 5

   14 while_stmt: WHILE • LPAREN rel_expr RPAREN block

    LPAREN  shift, and go to state 19


State 6

   15 print_stmt: PRINT • LPAREN expr RPAREN SEMI

    LPAREN  shift, and go to state 20


State 7

    0 $accept: program • $end

    $end  shift, and go to state 21


State 8

    1 program: stmts •
    2 stmts: stmts • stmt

    ID_TOK  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6

    $default  reduce using rule 1 (program)

    stmt         go to state 22
    decl         go to state 10
    assign_stmt  go to state 11
    if_stmt      go to state 12
    while_stmt   go to state 13
    print_stmt   go to state 14


State 9

    3 stmts: stmt •

    $default  reduce using rule 3 (stmts)


State 10

    4 stmt: decl •

    $default  reduce using rule 4 (stmt)


State 11

    5 stmt: assign_stmt •

    $default  reduce using rule 5 (stmt)


State 12

    6 stmt: if_stmt •

    $default  reduce using rule 6 (stmt)


State 13

    7 stmt: while_stmt •

    $default  reduce using rule 7 (stmt)


State 14

    8 stmt: print_stmt •

    $default  reduce using rule 8 (stmt)


State 15

   11 assign_stmt: ID_TOK ASSIGN • expr SEMI

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 28


State 16

    9 decl: INT ID_TOK • SEMI

    SEMI  shift, and go to state 29


State 17

   10 decl: FLOAT ID_TOK • SEMI

    SEMI  shift, and go to state 30


State 18

   12 if_stmt: IF LPAREN • rel_expr RPAREN block
   13        | IF LPAREN • rel_expr RPAREN block ELSE block

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    rel_expr  go to state 31
    expr      go to state 32


State 19

   14 while_stmt: WHILE LPAREN • rel_expr RPAREN block

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    rel_expr  go to state 33
    expr      go to state 32


State 20

   15 print_stmt: PRINT LPAREN • expr RPAREN SEMI

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 34


State 21

    0 $accept: program $end •

    $default  accept


State 22

    2 stmts: stmts stmt •

    $default  reduce using rule 2 (stmts)


State 23

   31 expr: ID_TOK •

    $default  reduce using rule 31 (expr)


State 24

   32 expr: INT_NUM •

    $default  reduce using rule 32 (expr)


State 25

   33 expr: FLOAT_NUM •

    $default  reduce using rule 33 (expr)


State 26

   29 expr: MINUS • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 35


State 27

   30 expr: LPAREN • expr RPAREN

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 36


State 28

   11 assign_stmt: ID_TOK ASSIGN expr • SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41
    SEMI   shift, and go to state 42


State 29

    9 decl: INT ID_TOK SEMI •

    $default  reduce using rule 9 (decl)


State 30

   10 decl: FLOAT ID_TOK SEMI •

    $default  reduce using rule 10 (decl)


State 31

   12 if_stmt: IF LPAREN rel_expr • RPAREN block
   13        | IF LPAREN rel_expr • RPAREN block ELSE block

    RPAREN  shift, and go to state 43


State 32

   18 rel_expr: expr • EQ expr
   19         | expr • NEQ expr
   20         | expr • LT expr
   21         | expr • GT expr
   22         | expr • LEQ expr
   23         | expr • GEQ expr
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    EQ     shift, and go to state 44
    NEQ    shift, and go to state 45
    LT     shift, and go to state 46
    GT     shift, and go to state 47
    LEQ    shift, and go to state 48
    GEQ    shift, and go to state 49
    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41


State 33

   14 while_stmt: WHILE LPAREN rel_expr • RPAREN block

    RPAREN  shift, and go to state 50


State 34

   15 print_stmt: PRINT LPAREN expr • RPAREN SEMI
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    STAR    shift, and go to state 39
    SLASH   shift, and go to state 40
    MOD     shift, and go to state 41
    RPAREN  shift, and go to state 51


State 35

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr
   29     | MINUS expr •

    $default  reduce using rule 29 (expr)


State 36

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr
   30     | LPAREN expr • RPAREN

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    STAR    shift, and go to state 39
    SLASH   shift, and go to state 40
    MOD     shift, and go to state 41
    RPAREN  shift, and go to state 52


State 37

   24 expr: expr PLUS • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 53


State 38

   25 expr: expr MINUS • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 54


State 39

   26 expr: expr STAR • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 55


State 40

   27 expr: expr SLASH • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 56


State 41

   28 expr: expr MOD • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 57


State 42

   11 assign_stmt: ID_TOK ASSIGN expr SEMI •

    $default  reduce using rule 11 (assign_stmt)


State 43

   12 if_stmt: IF LPAREN rel_expr RPAREN • block
   13        | IF LPAREN rel_expr RPAREN • block ELSE block

    LBRACE  shift, and go to state 58

    block  go to state 59


State 44

   18 rel_expr: expr EQ • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 60


State 45

   19 rel_expr: expr NEQ • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 61


State 46

   20 rel_expr: expr LT • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 62


State 47

   21 rel_expr: expr GT • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 63


State 48

   22 rel_expr: expr LEQ • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 64


State 49

   23 rel_expr: expr GEQ • expr

    ID_TOK     shift, and go to state 23
    INT_NUM    shift, and go to state 24
    FLOAT_NUM  shift, and go to state 25
    MINUS      shift, and go to state 26
    LPAREN     shift, and go to state 27

    expr  go to state 65


State 50

   14 while_stmt: WHILE LPAREN rel_expr RPAREN • block

    LBRACE  shift, and go to state 58

    block  go to state 66


State 51

   15 print_stmt: PRINT LPAREN expr RPAREN • SEMI

    SEMI  shift, and go to state 67


State 52

   30 expr: LPAREN expr RPAREN •

    $default  reduce using rule 30 (expr)


State 53

   24 expr: expr • PLUS expr
   24     | expr PLUS expr •
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 24 (expr)


State 54

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   25     | expr MINUS expr •
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 25 (expr)


State 55

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   26     | expr STAR expr •
   27     | expr • SLASH expr
   28     | expr • MOD expr

    $default  reduce using rule 26 (expr)


State 56

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   27     | expr SLASH expr •
   28     | expr • MOD expr

    $default  reduce using rule 27 (expr)


State 57

   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr
   28     | expr MOD expr •

    $default  reduce using rule 28 (expr)


State 58

   16 block: LBRACE • stmts RBRACE
   17      | LBRACE • RBRACE

    ID_TOK  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    RBRACE  shift, and go to state 68

    stmts        go to state 69
    stmt         go to state 9
    decl         go to state 10
    assign_stmt  go to state 11
    if_stmt      go to state 12
    while_stmt   go to state 13
    print_stmt   go to state 14


State 59

   12 if_stmt: IF LPAREN rel_expr RPAREN block •
   13        | IF LPAREN rel_expr RPAREN block • ELSE block

    ELSE  shift, and go to state 70

    $default  reduce using rule 12 (if_stmt)


State 60

   18 rel_expr: expr EQ expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 18 (rel_expr)


State 61

   19 rel_expr: expr NEQ expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 19 (rel_expr)


State 62

   20 rel_expr: expr LT expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 20 (rel_expr)


State 63

   21 rel_expr: expr GT expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 21 (rel_expr)


State 64

   22 rel_expr: expr LEQ expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 22 (rel_expr)


State 65

   23 rel_expr: expr GEQ expr •
   24 expr: expr • PLUS expr
   25     | expr • MINUS expr
   26     | expr • STAR expr
   27     | expr • SLASH expr
   28     | expr • MOD expr

    PLUS   shift, and go to state 37
    MINUS  shift, and go to state 38
    STAR   shift, and go to state 39
    SLASH  shift, and go to state 40
    MOD    shift, and go to state 41

    $default  reduce using rule 23 (rel_expr)


State 66

   14 while_stmt: WHILE LPAREN rel_expr RPAREN block •

    $default  reduce using rule 14 (while_stmt)


State 67

   15 print_stmt: PRINT LPAREN expr RPAREN SEMI •

    $default  reduce using rule 15 (print_stmt)


State 68

   17 block: LBRACE RBRACE •

    $default  reduce using rule 17 (block)


State 69

    2 stmts: stmts • stmt
   16 block: LBRACE stmts • RBRACE

    ID_TOK  shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    PRINT   shift, and go to state 6
    RBRACE  shift, and go to state 71

    stmt         go to state 22
    decl         go to state 10
    assign_stmt  go to state 11
    if_stmt      go to state 12
    while_stmt   go to state 13
    print_stmt   go to state 14


State 70

   13 if_stmt: IF LPAREN rel_expr RPAREN block ELSE • block

    LBRACE  shift, and go to state 58

    block  go to state 72


State 71

   16 block: LBRACE stmts RBRACE •

    $default  reduce using rule 16 (block)


State 72

   13 if_stmt: IF LPAREN rel_expr RPAREN block ELSE block •

    $default  reduce using rule 13 (if_stmt)
